# kaizenflow

./: .coveragerc  .dockerignore  .dockerignore.prod  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .reviewboardrc  .semgrepignore  404.html  ADAUSD_historical_data.json  AXSUSD_historical_data.json  BTCUSD_historical_data.json  CMTask232_compute_start_end_table.ipynb  CMTask232_compute_start_end_table.py  CMTask3368_Add_AWS_config_when_running_via_CI-checkpoint-cp.ipynb  CMTask3368_Add_AWS_config_when_running_via_CI-checkpoint-cp.py  DATA605FinalProject.ipynb  DATA605_Final_Project.ipynb  Dockerfile  Dockerfile-flask  Dockerfile-rabbitmq  Dockerfile-subscriber  Dockerfile.bak  Dockerfile.subscriber  ENJUSD_historical_data.json  ETHUSD_historical_data.json  From_0_to_Web3.md  Goals_of_packages.md  INJUSD_historical_data.json  LICENSE  LINKUSD_historical_data.json  MANAUSD_historical_data.json  MATICUSD_historical_data.json  Makefile  Master_crypto_analysis.ipynb  Master_crypto_analysis.py  Organization_and_procedures.md  PartTask2751_Master_pipeline_runs_aggregate_results.ipynb  PartTask2751_Master_pipeline_runs_aggregate_results.py  (+91 more)
.github/: gh_requirements.txt
802-spring2024_orm_integration_with_zookeeper_for_configuration_management/: README.md  documentation of ORM Integration with ZooKeeper for Configuration Management.md
Zookeeper Project/: Dockerfile  Dockerfile.jupyter  config_manager.ipynb  config_manager.py  docker-compose.yaml
alembic/: alembic.ini  env.py
allure-results/: 00018bbf-3d42-4393-9389-5990aa508708-container.json  0001edc8-d2b6-4a80-a302-7e451e69b930-result.json  00027ad2-48ad-4a12-bca9-6b04cdd76f14-result.json  00028a73-5ccf-4a2d-bc44-0cc3f07bfa54-container.json  0015bb9b-e461-46da-ab87-013b1f6c696c-container.json  001e74cb-30d8-42e0-af84-0e11be6d88df-result.json  00273061-d3d4-4c32-8bdb-45f8ff2fd25f-result.json  002c814e-584a-48e2-b03d-fb6d91d5da11-result.json  00381175-bf04-4e7d-ab42-4086884d3b67-container.json  003f66a6-c95a-4d3a-9b65-534e257e8149-container.json  0047918b-27cc-441b-9821-06c9a86cb347-result.json  005571e9-ef14-4e60-ae0c-f51d4be6d8c7-container.json  0056fa35-bfd1-4ee2-bf66-2372146323d8-container.json  005a067b-aa50-4224-9a7b-b66c901e1893-result.json  005b66a7-20ef-4bd5-a704-088335e14b7c-container.json  005c8608-2eb9-4a4a-a2ca-fb0a25e300d8-result.json  00663e4f-3dea-419c-b600-607c4164aa67-container.json  006775ed-f5b3-401d-9b96-9b01c1bb9bd3-container.json  0070edc3-6c55-45e8-9340-877c1705526a-result.json  00769733-356e-4768-8e9d-944cd8b847e0-attachment.txt  007dacca-7103-4d84-bb08-ae6b88125e82-result.json  0080ee8a-ad09-41d2-8472-8e6f70e8d805-attachment.txt  00875266-48a0-4701-91d0-0dd3fc5ffe09-result.json  0091c6cb-ea26-47be-b954-caf7b68d1789-result.json  00aa1560-37c3-4cc6-8698-6175697537ac-attachment.txt  00ad59a0-9593-455f-b8ca-ff2a5edfa3b3-attachment.txt  00ae6342-373b-4a51-8f1d-4716a07100ab-attachment.txt  00b2b09d-6786-4f09-8343-aeb0f1c4c2ed-attachment.txt  00b3f61b-816a-44f5-922b-52694bf46999-attachment.txt  00bde0db-020b-4baa-ae6f-231f06815904-container.json  00c45aa0-39f0-4d85-af35-a88c9fbea760-attachment.txt  00c55b8b-25da-493c-9455-bbed4ee83755-attachment.txt  00c9b1ef-b906-4af6-a1e5-5e3cf7364a45-container.json  00cb516d-a1b3-4cd9-ab09-3a5810458261-attachment.txt  00cd9231-a1f3-4294-8efb-3a4b8bf213f5-container.json  00ce5100-152b-40af-86c6-74014f57c77c-attachment.txt  00d05caa-f341-468b-8a1a-0f1304eeaa7c-attachment.txt  00d87fdc-c5d8-4acc-b07a-965e388508f7-attachment.txt  00e5790c-d6b3-4817-a35b-d04b97e6f407-container.json  00e5ce42-37f8-43c7-8c0f-845f41ab8472-attachment.txt  (+10672 more)
alpha_vantage/: Dockerfile  api.py  install_jupy.sh  main.ipynb  main.py  models.py  requirements.txt
amp_research/: PartTask218_Large_price_movement_analysis.ipynb  PartTask218_Large_price_movement_analysis.py  PartTask218_Large_price_movement_analysis_for_security.ipynb  PartTask218_Large_price_movement_analysis_for_security.py  PartTask218_Large_price_movement_analysis_for_security_groups.ipynb  PartTask218_Large_price_movement_analysis_for_security_groups.py  price_movement_analysis.py
aws/: am_aws.py
ck.marketing/: Cold_Outreach_filtering.ipynb  Healthcare_Leads.xlsx  example.txt
ck_alembic/: env.py
code/: finance.py
coding/: all.asyncio.explanation.html  all.code_design.how_to_guide.html  all.code_like_pragmatic_programmer.how_to_guide.html  all.code_review.how_to_guide.html  all.coding_style.how_to_guide.html  all.gsheet_into_pandas.how_to_guide.html  all.hcache.explanation.html  all.hplayback.how_to_guide.html  all.imports_and_packages.how_to_guide.html  all.integrate_repos.how_to_guide.html  all.jupyter_notebook.how_to_guide.html  all.plotting.how_to_guide.html  (+10 more)
dev_scripts/poetry/: necessary_packages  optional_packages  poetry.toml  pyproject.toml  run_poetry_debug.py  run_poetry_log_analyzer.py
devops/docker_build/: Dockerfile  README.md  cleanup.sh  conda.yml  create_users.sh  dev.Dockerfile  entrypoint.sh  etc_init_d_docker  etc_sudoers  fstab  gh_action_entrypoint.sh  init.sh  init_bash.sh  install_containers.sh  install_cprofile.sh  install_dind.sh  install_jupyter_extensions.sh  install_os_packages.sh  install_packages.sh  install_python_packages.sh  install_requirements.sh  prod.Dockerfile  pyproject.toml  run_slow_tests.sh
devops/docker_build/entrypoint/: aws_credentials.sh  gh_action_aws_credentials.sh  gh_action_google_secret_credentials.sh  patch_environment_variables.sh
devops/docker_build/init/: download_nltk_dicts.sh  download_spacy_dicts.sh  download_textblob_dicts.sh  install_jupyter_extensions.sh  jupyter_server_setup.sh
devops/docker_build/personal/example/: Dockerfile  docker-compose-jupyter.yml  docker-compose-user-space.yml
devops/docker_build/test/: test_mount_fsx.sh  test_mount_s3.sh  test_volumes.sh
optimizer/devops/docker_build/: create_users.sh  dev.Dockerfile  etc_sudoers  install_jupyter_extensions.sh  install_os_packages.sh  install_python_packages.sh  poetry.toml  pyproject.toml
sorrentum_sandbox/spring2024/devops/docker_build/: dev.Dockerfile  etc_sudoers  pyproject.toml
(+9324 files in other folders)
