[tool.poetry]
name = "amp"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
awscli = "*"
boto3 = "*"
bs4 = "*"
flaky = "*"
fsspec = "*"
gluonts = "== 0.6.7"
#ib_insync = "*"
invoke = "*"
jsonpickle = "*"
jupyter = "*"
jupyter_contrib_nbextensions = "*"
jupyter_nbextensions_configurator = "*"
jupytext = "*"
lxml = "*"
matplotlib = "*"
mxnet = ">= 1.6"
networkx = "*"
pandas = "^1.2.0"
psycopg2-binary = "*"
pyarrow = "*"
pytest = "^6.0.0"
pytest-cov = "*"
pytest-instafail = "*"
pytest-xdist = "*"
python = "^3.9"
pywavelets = "*"
requests = "*"
s3fs = "*"
seaborn = "*"
sklearn = "*"
statsmodels = "*"
tqdm = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
