[tool.poetry]
name = "optimizer"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
cvxopt = "*"
cvxpy = "*"
jupyter = "*"
jupyter_contrib_nbextensions = "*"
jupytext = "*"
pandas = "*"
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
