[tool.poetry]
name = "optimizer"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
async_solipsism = "*"
cvxopt = "*"
cvxpy = "*"
invoke = "*"
joblib = "*"
jupyter = "*"
jupyter_contrib_nbextensions = "*"
jupytext = "*"
pandas = "*"
pyarrow = "*"
pytest = "^6.0.0"
pytest-cov = "*"
pytest-instafail = "*"
pytest-rerunfailures = "*"
pytest-timeout = "*"
pytest-xdist = "*"
python = "^3.8"
s3fs = "*"
tqdm = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
